--- a/css/main.css
+++ b/css/main.css
@@ -11,32 +11,60 @@ img {
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #d7e6d7;
-  /* background-image: url(../images/pexels-ryan-holloway-243989.jpg); */
+  background-image: url(../images/pexels-thibault-trillet-167636.jpg);
+  background-size: cover;
+  background-position: center;
   padding: 0 1.5rem;
-  /* -webkit-filter: blur(5px); */
+}
+
+.upcoming-title {
+  color: whitesmoke;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 100px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  line-height: 1;
+  text-align: center;
+}
+
+.section {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 100px 0px 250px 130px;
+  margin-left: 10px;
 }
 
 .container {
-  width: 100%;
+  width: 90%;
+  height: 650px;
   max-width: 98rem;
   padding: 5rem;
+  margin-top: 100px;
   background-color: #fff;
   -webkit-box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 1.4rem 8rem rgba(0, 0, 0, 0.2);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
