--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@
   .upcoming-title {
     color: whitesmoke; 
     font-family: 'Times New Roman', Times, serif; 
-    font-size: 100px; 
+    font-size: 90px; 
     font-weight: bold; 
     text-transform: uppercase;
     letter-spacing: -1px; 
@@ -34,13 +34,14 @@
 
   .section {
       height: fit-content;
+      width: 90%;
       padding: 100px 0px 250px 130px;
       margin-left: 10px;
   }
   
   .container {
     width: 90%;
-    height: 650px;
+    height: fit-content;
     max-width: 98rem;
     padding: 5rem;
     margin-top: 100px;
@@ -67,6 +68,12 @@
     object-fit: cover;
     display: block;
     border-radius: 0.8rem;
+  }
+
+  .event-info {
+      height: 97%;
+      width: 50%;
+      margin-right: 25px;
   }
 
   .event-date span {
@@ -98,7 +105,57 @@
       font-size: 1.2rem;
       color: #fff;
       background: black;
-    //   background-color: linear-gradient(to right, #66D3FA 0%, #2565AE 100%);
       border-radius: 0.8rem;
       border: none;
+  }
+
+  @media screen and (max-width: 1515px){
+    .section {
+        width: fit-content;
+        padding: 80px 0px 0px 90px;
+    }
+  }
+
+  @media screen and (max-width: 1300px){
+    .container {
+        max-width: 80rem;
+        padding: 2.5;
+        flex-direction: column;
+    }
+    .upcoming-title {
+        font-size: 70px;
+    }
+    .event-info {
+        margin: 50px 50px;
+        width: 90%;
+    }
+  }
+
+  @media screen and (max-width: 1042px){
+    .event-date span {
+        font-size: 20px;
+    }
+  }
+
+  @media screen and (max-width: 897px){
+    .container {
+        max-width: 70rem;
+        padding: 2.5;
+        flex-direction: column;
+    }
+    .upcoming-title {
+        font-size: 70px;
+    }
+    .event-image {
+        min-width: 30rem;
+        max-width: 30rem;
+        transform: translate(0, -8rem);
+    }
+    .event-info {
+        margin-top: 0;
+        padding: 0;
+    }
+    .section {
+        padding: ;
+    }
   }
