--- a/css/main.scss
+++ b/css/main.scss
@@ -123,7 +123,7 @@
         flex-direction: column;
     }
     .upcoming-title {
-        font-size: 70px;
+        font-size: 65px;
     }
     .event-info {
         margin: 50px 50px;
@@ -140,11 +140,11 @@
   @media screen and (max-width: 897px){
     .container {
         max-width: 70rem;
-        padding: 2.5;
+        // padding: 2.5;
         flex-direction: column;
     }
     .upcoming-title {
-        font-size: 70px;
+        font-size: 60px;
     }
     .event-image {
         min-width: 30rem;
@@ -155,7 +155,49 @@
         margin-top: 0;
         padding: 0;
     }
+  }
+
+  @media screen and (max-width: 680px){
+    .event-info {
+      width: 100%;
+    }
+    .upcoming-title {
+      font-size: 45px;
+    }
+    .container {
+      width: 25em;
+      
+    }
+    .event-image {
+      min-width: 20rem;
+      max-width: 20rem;
+      min-height: 20rem;
+      max-height: 20rem;
+      transform: translate(0, -6rem);
+    }
     .section {
-        padding: ;
+      padding-left: 20px;
+    }
+  }
+
+  @media screen and (max-width: 512px){
+    .upcoming-title {
+      font-size: 40px;
+    }
+    .section {
+      padding-left: 0px;
+      margin-left: 0;
+    }
+    .event-title {
+      font-size: 30px;
+    }
+    .event-date {
+      font-size: 5px;
+    }
+    .event-description {
+      font-size: 17px;
+    }
+    .container {
+      padding: 2.5rem 3rem;
     }
   }
