Added successful registration page

--- a/css/main.css
+++ b/css/main.css
@@ -233,4 +233,16 @@ body {
     padding: 2.5rem 3rem;
   }
 }
+
+@media screen and (max-width: 405px) {
+  .section {
+    width: inherit;
+  }
+  body {
+    padding-left: 0;
+  }
+  .upcoming-title {
+    text-align: inherit;
+  }
+}
 /*# sourceMappingURL=main.css.map */
