--- a/css/main.scss
+++ b/css/main.scss
@@ -201,3 +201,15 @@
       padding: 2.5rem 3rem;
     }
   }
+
+  @media screen and (max-width: 405px){
+    .section {
+      width: inherit;
+    }
+    body {
+      padding-left: 0;
+    }
+    .upcoming-title {
+      text-align: inherit;
+    }
+  }
