--- a/css/registered.css
+++ b/css/registered.css
@@ -12,3 +12,8 @@ h2 {
     line-height: 3;
     text-align: center;
 }
+@media screen and (max-width: 680px){
+    h2 {
+        font-size: 30px;
+    }
+}
